--- a/main.tex
+++ b/main.tex
@@ -32,8 +32,7 @@
 \mainmatter
 
 \include{chapter_introduction}
-
-\include{chapter_statistics}
+\include{chapter_functions}
 
 \part{Mathematical probability}
 
@@ -42,6 +41,7 @@
 
 \part{Statistics}
 
+\include{chapter_statistics}
 \include{chapter_estimators}
 \include{chapter_descriptive}
 \include{chapter_inference}
