--- a/chapter_probability.tex
+++ b/chapter_probability.tex
@@ -1,6 +1,6 @@
 %!TEX root = main.tex
 
-\chapter{Probability theory}
+\chapter{Probability}
 \label{chapter:probability}
 
 To understand statistics, it's critical to have a grasp of basic concepts in
