--- a/main.tex
+++ b/main.tex
@@ -32,18 +32,21 @@
 \mainmatter
 
 \include{chapter_introduction}
+
+\part{Probability}
+
 \include{chapter_functions}
-
-\part{Mathematical probability}
-
 \include{chapter_probability}
 \include{chapter_randomvars}
 
-\part{Statistics}
+\part{Descriptive statistics}
 
 \include{chapter_statistics}
 \include{chapter_estimators}
 \include{chapter_descriptive}
+
+\part{Inferential statistics}
+
 \include{chapter_inference}
 \include{chapter_tests}
 
