--- a/main.tex
+++ b/main.tex
@@ -10,20 +10,21 @@
 \usepackage{fullpage}
 \usepackage{xfrac} % for sfrac
 
-\providecommand{\tightlist}{%
-  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+\providecommand{\tightlist}{\setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 
- \newcommand{\prob}[1]{\mathbb{P}\left[{#1}\right]}
- \newcommand{\expect}[1]{\mathbb{E}\!\left[{#1}\right]}
- \newcommand{\var}[1]{\mathbb{V}\left[{#1}\right]}
- \newcommand{\cov}[1]{\mathrm{Cov}\!\left[{#1}\right]}
- \newcommand{\defeq}{\stackrel{\text{def}}{=}}
+\newcommand{\prob}[1]{\mathbb{P}\left[{#1}\right]}
+\newcommand{\expect}[1]{\mathbb{E}\!\left[{#1}\right]}
+\newcommand{\var}[1]{\mathbb{V}\left[{#1}\right]}
+\newcommand{\cov}[1]{\mathrm{Cov}\!\left[{#1}\right]}
+\newcommand{\defeq}{\stackrel{\text{def}}{=}}
 
 \title{Statistical testing for scientists: principles of exact, approximate, and empirical tests}
 \author{Scott W. Olesen}
 
 \begin{document}
 \maketitle
+
+\tableofcontents
 
 \frontmatter
 
